--- a/angular.json
+++ b/angular.json
@@ -16,16 +16,18 @@
             "outputPath": "dist/tictactoe-js",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            
+  
             "polyfills": [
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+  "src/favicon.ico",
+  "src/assets"
+],
+
             "styles": [
               "src/styles.css"
             ],
@@ -92,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
