--- a/angular.json
+++ b/angular.json
@@ -13,26 +13,23 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/tictactoe-js",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            
-  
-            "polyfills": [
-              "zone.js"
-            ],
-            "tsConfig": "tsconfig.app.json",
-            
-            "assets": [
-  "src/favicon.ico",
-  "src/assets"
-],
-
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          },
+  "outputPath": "dist/tictactoe-js",
+  "index": "src/index.html",
+  "main": "src/main.ts",                
+  "polyfills": [
+    "zone.js"
+  ],
+  "tsConfig": "tsconfig.app.json",
+  "assets": [
+    "src/favicon.ico",
+    "src/assets"
+  ],
+  "styles": [
+    "src/styles.css"
+  ],
+  "scripts": []
+}
+,
           "configurations": {
             "production": {
               "budgets": [
