--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
   "outputPath": "dist/tictactoe-js",
   "index": "src/index.html",
-  "main": "src/main.ts",                
+  "browser": "src/main.ts",        
   "polyfills": [
     "zone.js"
   ],
@@ -28,8 +28,7 @@
     "src/styles.css"
   ],
   "scripts": []
-}
-,
+},
           "configurations": {
             "production": {
               "budgets": [
